Kotlibより先に読み込まれてしまうバグを修正

--- a/src/main/resources/nukkit.yml
+++ b/src/main/resources/nukkit.yml
@@ -1,6 +1,8 @@
 main: dev.itsu.bpx.core.Main
 name: BlockProtectX
-version: 1.0.0
+version: 1.4.0
 api: ["1.0.0"]
 author: itsu
 description: ブロックログ&ブロック保護プラグイン
+depend:
+  - Kotlib
