--- a/src/main/resources/nukkit.yml
+++ b/src/main/resources/nukkit.yml
@@ -1,8 +1,10 @@
 main: dev.itsu.bpx.core.Main
 name: BlockProtectX
-version: 1.7.0
+version: 1.8.0
 api: ["1.0.0"]
 author: itsu
+authors:
+  -popkechupki
 description: ブロックログ&ブロック保護プラグイン
 depend:
   - Kotlib
